# genie-cost-efficiency

./: .gitignore  FINDINGS.md  README.md  databricks.yml  pyproject.toml  requirements.txt
config/: benchmark.yaml  question_bank.yaml
config/golden/: answers.yaml  q01.sql  q02.sql  q03.sql  q04.sql  q05.sql  q06.sql  q07.sql  q08.sql  q09.sql
config/tiers/: t0.yaml  t1.yaml  t10.yaml  t11.yaml  t12.yaml  t13.yaml  t14.yaml  t15.yaml  t16.yaml  t17.yaml  t18.yaml  t19.yaml  t2.yaml  t20.yaml  t21.yaml  t22.yaml  t23.yaml  t24.yaml  t25.yaml  t26.yaml  t3.yaml  t4.yaml  t5.yaml  t6.yaml  t7.yaml  t8.yaml  t9.yaml
dashboards/: genie_tco.lvdash.json
resources/: dashboard.yml  jobs.yml  pipelines.yml  warehouses.yml
results/: repeat5_leaderboard.json  repeat5_per_run.json  repeat5_run_ids.txt
scripts/: attribute_repeat_wave.py  bootstrap_uc.py  contamination_check.py  materialize_gold.py  overnight_tco_story.sh  postprocess_run.sh  resolve_run_id.py  run_prove_two_tiers.sh  run_scale_tiers.sh
src/genie_bench/: __init__.py  config_utils.py  run_ids.py  sql_exec.py
src/genie_bench/cost/: __init__.py  attribute_costs.py
src/genie_bench/data_gen/: __init__.py  generate_raw.py
src/genie_bench/eval/: evaluate.py  scorers.py
src/genie_bench/metric_views/: __init__.py  build_metric_views.py  mv_conformed_sqlsrc.yaml  mv_conformed_wide.yaml  mv_membership.yaml  mv_sales_basic.yaml  mv_sales_rich.yaml  mv_sales_windowed.yaml  v_fiscal_anchor.sql  v_wide_helpers.sql  validate_metric_views.py
src/genie_bench/pipeline/: __init__.py  transformations.py
(+17 files in other folders)
